# leapfrog

./: .gitignore  Dockerfile  Instructions.md  LICENSE  Makefile  README.md  _CoqProject.noplugins  dune-project  leapfrog.opam
.github/workflows/: leapfrog-docker.yml
benchmarking/: Pipfile  plotter.py  runner.py
benchmarking/config/: benchmarks.py  logs.py
lib/: BisimChecker.v  Classes.v  CompileBitVec.v  CompileConfRel.v  CompileConfRelSimplified.v  CompileFirstOrderConfRelSimplified.v  ConfRel.v  DepEnv.v  FinType.v  FirstOrderBitVec.v  FirstOrderConfRel.v  FirstOrderConfRelSimplified.v  LangEquivToPreBisim.v  Notations.v  Ntuple.v  NtupleProofs.v  P4automaton.v  Reachability.v  Sum.v  SumProofs.v  Syntax.v  TypeNeq.v  Utils.v  WP.v  WPProofs.v  dune
lib/Benchmarks/: BabyIP.v  BabyIPProof.v  Benchmarking.v  DataCenter.v  DatacenterSelfProof.v  Edge.v  EdgeOptimizedOriginal.v  EdgeSelfProof.v  EdgeTransProof.v  Enterprise.v  EnterpriseSelfProof.v  Ethernet.v  EthernetProof.v  IPFilter.v  IPFilterProof.v  IPOptions.v  IPOptions1Proof.v  IPOptions2Proof.v  IPOptions3Proof.v  IPOptionsProof.v  IPOptionsProofSmall.v  IncPostfilter.v  LoopFooter.v  MPLSVectorized.v  MPLSVectorizedProof.v  MPLSVectorizedSmall.v  MPLSVectorizedSmallProof.v  MPLSVectorizedSmallUnrollProof.v  MPLSVectorizedUnrollProof.v  Memory.v  MemoryTallProof.v  MemoryWide16Proof.v  MemoryWideProof.v  NegativeProof.v  Overview.md  PlainUnroll.v  ProofHeader.v  README.md  SelfComparison.v  SelfComparisonProof.v  (+25 more)
lib/Bisimulations/: Algorithmic.v  AlgorithmicLeaps.v  AlgorithmicLeapsProofs.v  AlgorithmicProofs.v  Leaps.v  LeapsProofs.v  Semantic.v  SemanticCoinductive.v  Syntactic.v  Upto.v  UptoProofs.v  WPLeaps.v  WPLeapsProofs.v
lib/Tests/: Ethernet_IP.p4  Ethernet_IP_options.p4  Ethernet_VLAN_IP.p4
lib/Utils/: FunctionalFP.v  Tactics.v
