opam-version: "2.0"
version: "0.1.0"
synopsis: "Leapfrog: Certified Equivalence for Protocol Parsers"
maintainer: "jnfoster@cs.cornell.edu"
authors: ["Nate Foster <jnfoster@cs.cornell.edu>"]
homepage: "https://github.com/cornell-netlab/leapfrog"
dev-repo: "git+https://github.com/cornell-netlab/leapfrog/"
bug-reports: "https://github.com/cornell-netlab/leapfrog/issues"
build: [
  [make "-j" jobs]
]
install: [
  ["dune" "install"]
]
depends: [
  "mirrorsolve"
  "dune" {build & >= "2.9"}
  "coq" {build & = "8.13.2"}
  "coq-equations" {build & = "1.3~beta1+8.13"}
]
