(coq.theory
 (name Leapfrog)
 (package leapfrog)
 (synopsis "Leapfrog: Certified Equivalence for Protocol Parsers")
 (libraries mirrorsolve)
 (modules
  (:standard
   \
   Benchmarks.Benchmarking
   Benchmarks.TCAMSimpleProof
   Benchmarks.SimpleByteProof
   Benchmarks.SimpleParsers
   Benchmarks.NegativeProof
   Benchmarks.SelfComparisonProof
   Benchmarks.EnterpriseSelfProof
   Benchmarks.DatacenterSelfProof
   Benchmarks.EdgeSelfProof
   Benchmarks.ServiceproviderSelfProof
   Benchmarks.ServiceProviderTransProof
   Benchmarks.EdgeTransProof
   Benchmarks.SimpleBucketProof
   Benchmarks.IPOptionsProof
   Benchmarks.IPOptions2Proof
   Benchmarks.IPOptions3Proof
   Benchmarks.IPOptionsProofSmall
   Benchmarks.MemoryWideProof
   Benchmarks.MemoryWide16Proof
   Benchmarks.MemoryTallProof
    ; Benchmarks.BabyIP
   Benchmarks.BabyIPProof
   Benchmarks.BabyIPProofSimplified
    ; Benchmarks.Ethernet
   Benchmarks.EthernetProof
    ; Benchmarks.IPFilter
   Benchmarks.IPFilterProof
   Benchmarks.IncPostfilter ; delete
   Benchmarks.LoopFooter ; delete
   ;  Benchmarks.MPLSVectorized
   Benchmarks.MPLSVectorizedProof
   Benchmarks.MPLSVectorizedSmall
   Benchmarks.MPLSVectorizedSmallProof
   Benchmarks.MPLSVectorizedSmallUnrollProof
   Benchmarks.MPLSVectorizedUnrollProof
   Benchmarks.PlainInline ; delete
   Benchmarks.PlainUnroll ; delete
   ; Benchmarks.ProofHeader
   Benchmarks.SeparateMerged ; delete
   Benchmarks.SimpleLoop ; delete
   Benchmarks.SimpleLoopProof
   Benchmarks.SimpleSplit ; delete
   Benchmarks.SimpleSplitProof
    ; Benchmarks.SmallFilter
   Benchmarks.SmallFilterProof
   Benchmarks.SloppyStrictProof
   Benchmarks.TimestampSmallProof
   Benchmarks.TimestampSingleProof
   Benchmarks.TimestampSingleZeroProof
   Benchmarks.UnrollInline ; delete
   )))
(include_subdirs qualified)
