(coq.theory
 (name Leapfrog)
 (package leapfrog)
 (synopsis "Leapfrog: Certified Equivalence for Protocol Parsers")
 (libraries mirrorsolve)
 (modules
  (:standard
   \
   Bisimulations.LeapsProofs
   Bisimulations.WPLeapsProofs
   Bisimulations.AlgorithmicLeapsProofs
   WPProofs
   SumProofs
   Benchmarks.Benchmarking
    Benchmarks.TCAMSimple
   Benchmarks.TCAMSimpleProof
   Benchmarks.SimpleByteProof
   Benchmarks.NegativeProof
   Benchmarks.SelfComparison
   Benchmarks.SelfComparisonProof
   Benchmarks.Enterprise
   Benchmarks.EnterpriseSelfProof
   Benchmarks.DataCenter
   Benchmarks.DatacenterSelfProof
   ; Benchmarks.Edge
   Benchmarks.EdgeSelfProof
   Benchmarks.ServiceProvider
   Benchmarks.ServiceproviderSelfProof
   Benchmarks.ServiceProviderTransProof
   Benchmarks.EdgeTransProof
   Benchmarks.SimpleBucketProof
   Benchmarks.IPOptions
   Benchmarks.IPOptionsProof
   Benchmarks.IPOptions2Proof
   Benchmarks.IPOptions3Proof
   Benchmarks.IPOptionsProofSmall
   Benchmarks.BabyIP
   Benchmarks.BabyIPProof
   Benchmarks.BabyIPProofSimplified
   ; Benchmarks.Ethernet
   Benchmarks.EthernetProof
   Benchmarks.IPFilter
   Benchmarks.IPFilterProof
   Benchmarks.IncPostfilter ; delete
   Benchmarks.LoopFooter ; delete
   Benchmarks.MPLSVectorized
   Benchmarks.MPLSVectorizedProof
   Benchmarks.MPLSVectorizedSmall
   Benchmarks.MPLSVectorizedSmallProof
   Benchmarks.MPLSVectorizedSmallUnrollProof
   Benchmarks.MPLSVectorizedUnrollProof
   Benchmarks.PlainInline ; delete
   Benchmarks.PlainUnroll ; delete
   ; Benchmarks.ProofHeader
   Benchmarks.SeparateMerged ; delete
   Benchmarks.SimpleLoop ; delete
   Benchmarks.SimpleLoopProof
   Benchmarks.SimpleSplit ; delete
   Benchmarks.SimpleSplitProof
   Benchmarks.SmallFilter
   Benchmarks.SmallFilterProof
   Benchmarks.SloppyStrict
   Benchmarks.SloppyStrictProof
   Benchmarks.Timestamp
   Benchmarks.TimestampSmallProof
   Benchmarks.TimestampSingleProof
   Benchmarks.TimestampSingleZeroProof
   Benchmarks.UnrollInline ; delete

   ; definitely delete these
   Benchmarks.TLVSmall
   Benchmarks.SimpleParsers
   )))
(include_subdirs qualified)
