(coq.theory
 (name Leapfrog)
 (package leapfrog)
 (synopsis "Leapfrog: Certified Equivalence for Protocol Parsers")
 (libraries mirrorsolve)
 (modules
  (:standard
   \
   Benchmarks.Benchmarking
   Benchmarks.TCAMSimpleProof
   Benchmarks.NegativeProof
   Benchmarks.SelfComparisonProof
   Benchmarks.EnterpriseSelfProof
   Benchmarks.DatacenterSelfProof
   Benchmarks.EdgeSelfProof
   Benchmarks.ServiceproviderSelfProof
   Benchmarks.ServiceProviderTransProof
   Benchmarks.EdgeTransProof
   Benchmarks.SimpleBucketProof
   Benchmarks.IPOptions1Proof
   Benchmarks.IPOptions2Proof
   Benchmarks.IPOptions3Proof
   Benchmarks.IPOptionsProofSmall
   Benchmarks.MemoryWideProof
   Benchmarks.MemoryWide16Proof
   Benchmarks.MemoryTallProof
   Benchmarks.BabyIPProof
   Benchmarks.EthernetProof
   Benchmarks.IPFilterProof
   Benchmarks.MPLSVectorizedProof
   Benchmarks.MPLSVectorizedSmall
   Benchmarks.MPLSVectorizedSmallProof
   Benchmarks.MPLSVectorizedSmallUnrollProof
   Benchmarks.MPLSVectorizedUnrollProof
   Benchmarks.SmallFilterProof
   Benchmarks.SloppyStrictFilter
   Benchmarks.SloppyStrictStores
   Benchmarks.TimestampSmallProof
   Benchmarks.TimestampSingleProof
   Benchmarks.TimestampSingleZeroProof
   )))
(include_subdirs qualified)
